# job-tracker

./: .gitignore
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 29d20235d7ee_add_users_and_link_applications_to_users.py  d9c69115a0e0_create_applications_table.py
backend/app/: main.py
backend/app/core/: config.py  deps.py  jwt.py  security.py
backend/app/db/: models.py  session.py
backend/app/routers/: applications.py  auth.py  health.py
backend/app/schemas/: application.py  auth.py  common.py
backend/job_tracker_backend.egg-info/: PKG-INFO  SOURCES.txt
