[project]
name = "job-tracker-backend"
version = "0.1.0"
description = "Job Application Tracker API (FastAPI)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
  "ruff>=0.6",
]
